--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <button><a href="products.html"><i class="bi bi-box-seam"></i> Products</a></button>
         </div>
     </section>
-    <section class="serviceh1">
-        <h1>Our services</h1>
-    </section>
+    <h1 class="serviceh1">Our services</h1>
     <section class="services">
         <div class="service">
             <img src="images/service1.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
