--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
             <img src="images/service3.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
         </div>
     </section>
+    <footer>
+        <p>Company Name 2025-2026 all right reserved</p>
+    </footer>
 </body>
 </html>
