--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="nav_links">
-                <button><a href="home.html"><i class="bi bi-house"></i> Home</a></button>
+                <button><a href="index.html"><i class="bi bi-house"></i> Home</a></button>
                 <h1>Company Name</h1>
                 <button><a href="contact.html"><i class="bi bi-envelope"></i> Contact</a></button>
             </ul>
