--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -27,13 +27,13 @@
     <h1 class="serviceh1">Our services</h1>
     <section class="services">
         <div class="service">
-            <img src="images/service1.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
+            <img src="../images/service1.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
         </div>
         <div class="service">
-            <img src="images/service2.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
+            <img src="../images/service2.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
         </div>
         <div class="service">
-            <img src="images/service3.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
+            <img src="../images/service3.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
         </div>
     </section>
     <footer>
