--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,11 @@
     <header>
         <nav>
             <ul class="nav_links">
-                <button><a href="../html/index.html"><i class="bi bi-house"></i> Home</a></button>
+                <button onclick="afficherMessage()">
+                    <a href="../html/index.html">
+                        <i class="bi bi-house"> </i>
+                    Home</a>
+                </button>
                 <h1>Company Name</h1>
                 <button><a href="contact.html"><i class="bi bi-envelope"></i> Contact</a></button>
             </ul>
@@ -40,4 +44,6 @@
         <p>Company Name 2025-2026 all right reserved</p>
     </footer>
 </body>
+
+<script src="../js/script.js"></script>
 </html>
