--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="nav_links">
-                <button onclick="afficherMessage()">
+                <button>
                     <a href="../html/index.html">
                         <i class="bi bi-house"> </i>
                     Home</a>
@@ -28,6 +28,7 @@
             <button><a href="products.html"><i class="bi bi-box-seam"></i> Products</a></button>
         </div>
     </section>
+
     <h1 class="serviceh1">Our services</h1>
     <section class="services">
         <div class="service">
@@ -38,6 +39,20 @@
         </div>
         <div class="service">
             <img src="../images/service3.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
+        </div>
+    </section>
+    <h1 class="datah1">Some Datas</h1>
+    <section>
+        <div class="datas">
+            <div class="data">
+                <p id="customers"></p>
+            </div>
+            <div class="data">
+                <p id="sold"></p>
+            </div>
+            <div class="data">
+                <p id="ca"></p>
+            </div>
         </div>
     </section>
     <footer>
