--- a/index.html
+++ b/index.html
@@ -28,19 +28,34 @@
             <button><a href="products.html"><i class="bi bi-box-seam"></i> Products</a></button>
         </div>
     </section>
-
     <h1 class="serviceh1">Our services</h1>
-    <section class="services">
-        <div class="service">
-            <img src="images/service1.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
+    <div class="container">
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="slide">
+                    <img src="https://picsum.photos/500/250"
+                        alt="Image 1">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/500/250"
+                        alt="Image 2">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/500/250"
+                        alt="Image 3">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/500/250"
+                        alt="Image 4">
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/500/250"
+                        alt="Image 5">
+                </div>
+            </div>
+            <div class="carousel-dots"></div>
         </div>
-        <div class="service">
-            <img src="images/service2.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
-        </div>
-        <div class="service">
-            <img src="images/service3.jpg" onerror="this.onerror=null; this.src='https://picsum.photos/500/250';">
-        </div>
-    </section>
+    </div>
     <h1 class="datah1">Some Datas</h1>
     <section>
         <div class="datas">
